# routes/tagihan_iuran_routes.go
@@ -1,4 +1,3 @@
-// routes/pemasukan_routes.go
 package routes
 
 import (
@@ -7,15 +6,18 @@ import (
 
 	"github.com/gin-gonic/gin"
 )
+
 func SetupTagihanIuranRoutes(api *gin.RouterGroup, tagihanIuranController *controllers.TagihanIuranController, authMiddleware *middleware.AuthMiddleware) {
 	tagihan := api.Group("/tagihan-iuran")
 	{
-		// Public routes (butuh auth)
-		tagihan.GET("", authMiddleware.RequireLevel(1, 2), tagihanIuranController.GetAllTagihanIuran)
-		tagihan.GET("/dropdown", authMiddleware.RequireLevel(1, 2), tagihanIuranController.GetTagihanIuranDropdown)
-		tagihan.GET("/:id", authMiddleware.RequireLevel(1, 2), tagihanIuranController.GetTagihanIuranByID)
+		// Routes yang bisa diakses semua level (1-6)
+		tagihan.GET("", authMiddleware.RequireLevel(1, 2, 3, 4, 5, 6), tagihanIuranController.GetAllTagihanIuran)
+		tagihan.GET("/dropdown", authMiddleware.RequireLevel(1, 2, 3, 4, 5, 6), tagihanIuranController.GetTagihanIuranDropdown)
+		tagihan.GET("/statistik", authMiddleware.RequireLevel(1, 2, 3, 4, 5, 6), tagihanIuranController.GetStatistikTagihanIuran)
+		tagihan.GET("/:id", authMiddleware.RequireLevel(1, 2, 3, 4, 5, 6), tagihanIuranController.GetTagihanIuranByID)
+		tagihan.POST("/:id/bayar", authMiddleware.RequireLevel(1, 2, 3, 4, 5, 6), tagihanIuranController.BayarIuran) // Warga bisa bayar sendiri
 		
-		// Admin only routes
+		// Routes khusus admin (level 1)
 		adminTagihan := tagihan.Group("")
 		adminTagihan.Use(authMiddleware.RequireLevel(1))
 		{
